const_typed_builder_test/compile_fail/single_generic_added_default_1.rs
use const_typed_builder::Builder;

fn main() {
    #[derive(Debug, Default, PartialEq, Eq, Builder)]
    pub struct Foo<A>
    where
        A: Default,
    {
        bar: A,
    }

    let foo: Foo<Option<String>> = Foo::builder().build();
}